fix: make modal-content more readable

--- a/darkMode.css
+++ b/darkMode.css
@@ -791,3 +791,13 @@ div.stepwizard-step > div.stepwizard-step--failed:hover {
 jhi-programming-exercise-instructions img {
 background-color: #4b4b4b;
 }
+
+.modal-content {
+    color: #ccc;
+}
+.modal-content button{
+    background-color: #4b4b4b;
+}
+.modal-content button:hover{
+    background-color: #4c4c4c;
+}
